# inspec

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.py  requirements.txt  setup.py
.github/workflows/: pytest.yml
inspec/: __init__.py  _logging.py  chars.py  cli.py  colormap.py  colormaps.py  const.py  core.py  debug.py  defaults.py  gui.py  help.py  inspec.py  io.py  main.py  maps.py  paginate.py  render.py  transform.py  var.py
inspec/develop/: cli.py  debug.py  example_apps.py
inspec/gui/: audio_viewer.py  base.py  image_viewer.py  live_audio_viewer.py  main.py  paginate.py  state.py  utils.py
inspec/plugins/: colormap.py
inspec/plugins/audio/: amplitude_view.py  base.py  spectrogram.py  spectrogram_view.py
inspec/plugins/views/: spectrogram_view.py
inspec2/: base_app.py
inspec2/examples/: simple_app.py
src/: audio_utils.py  cli.py  inspec.py  inspec2.py  options.py  test_spectrogram.py
src/app/: audio_view.py  display.py
src/inspec/: cli.py  colormap.py  core.py  defaults.py  maps.py  paginate.py  render.py  transform.py
src/inspec/develop/: debug.py
src/inspec/gui/: image_viewer.py  live_audio_viewer.py
src/inspec_app/: app.py  debug.py  draw.py  events.py  example.py  key_handlers.py  layout.py  paginate.py  test_paginate.py  video_example.py
src/inspec_cli/: cli.py
src/inspec_core/: audio_utils.py  audio_view.py  base_view.py  basic_audio_view.py  basic_image_view.py  cli.py  colormaps.py  examples.py  image_view.py  live_audio_view.py  options.py  test_preserve_aspect_ratio.py  test_spectrogram.py  test_views.py  utils.py  video_view.py
src/inspec_core/app/: app.py  draw.py  events.py  key_handlers.py  test_paginate.py  video_example.py
src/inspec_core/components/: audio_view.py  base_view.py  image_view.py  live_audio_view.py  size.py  test_preserve_aspect_ratio.py  test_views.py  video_view.py
src/inspec_core/inspec_curses/: __init__.py  color_pair.py  context.py  debug.py  test_color_pair.py  test_context.py  utils.py
src/inspec_core/render/: __init__.py  chars.py  colors.py  display.py  renderer.py  test_render.py
src/inspec_curses/: README.md  __init__.py  color_pair.py  context.py  debug.py  registry.py  test_color_pair.py  test_context.py
src/render/: __init__.py  chars.py  colors.py  display.py  patches.py  renderer.py  test_render.py  types.py  x256.py
src/view/: audio.py  base.py  images.py  test_view.py
tests/: test_colormap.py  test_gui.py  test_maps.py  test_paginate.py  test_spectrogram.py  test_transform.py
tests/integration_tests/: test_printing.py
tests/test_plugins/: test_colormap.py  test_spectrogram.py  test_spectrogram_view.py
